--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h1>Dla Obi ❤️</h1>
     <p>
       To jest mały kawałek internetu tylko dla Ciebie.<br>
-      Na wspomnienia, miłość i wszystko nasze.
+      Na wspomnienia, miłość i wszystko nasze. CHEEEEEJ
     </p>
     <p>
       Kocham Cię.  
