--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
     <p>
       To jest mały kawałek internetu tylko dla Ciebie.<br>
       Na wspomnienia, miłość i wszystko nasze. CHEEEEEJ
+      <a href="https://www.youtube.com/watch?v=B2nqLVFxvqw" style="font-size:20px; text-decoration:none; color:black;">
+  to ja
+</a>
+
     </p>
     <p>
       Kocham Cię.  
