--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       To jest mały kawałek internetu tylko dla Ciebie.<br>
       Na wspomnienia, miłość i wszystko nasze. CHEEEEEJ
       <a href="https://www.youtube.com/watch?v=B2nqLVFxvqw" style="font-size:20px; text-decoration:none; color:black;">
+        <a href="https://www.youtube.com/watch?v=B2nqLVFxvqw">to ja</a>
+<br>
+<a href="https://cdn.shopify.com/s/files/1/0568/2298/8958/files/mocha-sanrio_1_480x480.png?v=1698392176">to my</a>
   to ja
 </a>
 
