--- a/index.html
+++ b/index.html
@@ -1,44 +1,112 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8">
-  <title>Obi-dobi ❤️</title>
-  <style>
-    body {
-      background: #0f0f0f;
-      color: #fff;
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    .card {
-      background: #1b1b1b;
-      padding: 40px;
-      border-radius: 20px;
-      text-align: center;
-      max-width: 600px;
-    }
-    h1 { color: #ff6fae; }
-  </style>
+    <meta charset="UTF-8">
+    <title>19 lat – nasze chwile</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+            background: #111;
+            color: #f2f2f2;
+        }
+
+        header {
+            padding: 30px;
+            text-align: center;
+            background: #1c1c1c;
+            border-bottom: 1px solid #333;
+        }
+
+        header h1 {
+            font-weight: normal;
+            line-height: 1.4;
+        }
+
+        .container {
+            display: flex;
+            min-height: calc(100vh - 140px);
+        }
+
+        nav {
+            width: 260px;
+            background: #181818;
+            border-right: 1px solid #333;
+            padding: 20px;
+        }
+
+        nav a {
+            display: block;
+            color: #f2f2f2;
+            text-decoration: none;
+            padding: 10px;
+            margin-bottom: 8px;
+            border-radius: 6px;
+            background: #222;
+        }
+
+        nav a:hover {
+            background: #333;
+        }
+
+        main {
+            flex: 1;
+            padding: 30px;
+        }
+
+        .photo {
+            max-width: 500px;
+            margin: 0 auto;
+            text-align: center;
+        }
+
+        .photo img {
+            width: 100%;
+            border-radius: 16px;
+            box-shadow: 0 0 20px rgba(0,0,0,0.6);
+        }
+
+        footer {
+            text-align: center;
+            padding: 15px;
+            font-size: 12px;
+            color: #aaa;
+            border-top: 1px solid #333;
+        }
+    </style>
 </head>
 <body>
-  <div class="card">
-    <h1>Dla Obi ❤️</h1>
-    <p>
-      To jest mały kawałek internetu tylko dla Ciebie.<br>
-      Na wspomnienia, miłość i wszystko nasze. CHEEEEEJ
-      <a href="https://www.youtube.com/watch?v=B2nqLVFxvqw" style="font-size:20px; text-decoration:none; color:black;">
-        <a href="https://www.youtube.com/watch?v=B2nqLVFxvqw">to ja</a>
-<br>
-<a href="https://cdn.shopify.com/s/files/1/0568/2298/8958/files/mocha-sanrio_1_480x480.png?v=1698392176">to my</a>
-</a>
 
-    </p>
-    <p>
-      Kocham Cię.  
-    </p>
-  </div>
+<header>
+    <h1>
+        19 lat, zobacz jak ten czas mija…<br>
+        przygotowałem dla ciebie jak najwięcej naszych wspólnych chwil<br>
+        oraz podzieliłem je na kategorie &lt;3
+    </h1>
+</header>
+
+<div class="container">
+    <nav>
+        <a href="/poczatki">Nasze początki</a>
+        <a href="/pocalunek">Nasz pierwszy pocałunek</a>
+        <a href="/przyklad3">Przykład 3</a>
+        <a href="/przyklad4">Przykład 4</a>
+        <a href="/przyklad5">Przykład 5</a>
+        <a href="/przyklad6">Przykład 6</a>
+    </nav>
+
+    <main>
+        <div class="photo">
+            <img src="images/obi.jpg" alt="My razem">
+            <p>My. Bez filtrów, bez ściemy.</p>
+        </div>
+    </main>
+</div>
+
+<footer>
+    Dla Obi-dobi 💖
+</footer>
+
 </body>
 </html>
+
