--- a/index.html
+++ b/index.html
@@ -93,12 +93,15 @@
         <a href="/przyklad4">Przykład 4</a>
         <a href="/przyklad5">Przykład 5</a>
         <a href="/przyklad6">Przykład 6</a>
+        <a href="/przyklad7">Przykład 7</a>
+        <a href="/przyklad8">Przykład 8</a>
+        <a href="/przyklad9">Przykład 9</a>
     </nav>
 
     <main>
         <div class="photo">
             <img src="images/obi.jpg" alt="My razem">
-            <p>My. Bez filtrów, bez ściemy.</p>
+            <p>-- 17.08.2025 --</p>
         </div>
     </main>
 </div>
