--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>19 lat – nasze chwile</title>
+    <title>Moja Altka - Oliwka 🤍</title>
+    <link rel="icon" type="image/png" href="/miniaturka.png">
     <style>
         body {
             margin: 0;
